# p1160_esp32s3_photopainter_fw

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/pmic/: CMakeLists.txt  Kconfig.projbuild  XPowersCommon.tpp  axp2101.h  pmic.c  pmic.h
docs/: DEV_NOTES.md  ditheringColors.md  memory.md  openapi.yaml
imageBuilder/: .gitignore  imageProcessor.py  sendImage.sh
main/: CMakeLists.txt  Kconfig.projbuild  common.h  eink.c  eink.h  fileSys.c  fileSys.h  idf_component.yml  main.c  main.h  network.c  network.h  pmic.cpp  pmic.h
tests/: imageProcessor.py  makefile  mock.h  testAPI.c  testAPI.py
